Work on 2021 update

--- a/case-study-template.html
+++ b/case-study-template.html
@@ -76,56 +76,87 @@
 
     <section class="hero">
 
-      <h1 class="hero-headline">Project brand</h1>
-      <p class="hero-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Blandit massa enim nec dui nunc. Proin gravida hendrerit lectus a. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. </p>
-      <img class="hero-image" src="images/image-placeholder.png" alt="Floodlight MS homepage screenshot"></img>
+      <h1 class="hero-headline">Floodlight MS</h1>
+      <p class="hero-copy">Streamlining collaboration between UX and creative direction with Sketch</p>
+      <img class="hero-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot" width="300px"></img>
     </section>
 
     <section class="floodlight-summary">
 
         <h2 class="project-overview-headline">Project overview</h2>
 
-        <p class="project-overview-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Blandit massa enim nec dui nunc. Proin gravida hendrerit lectus a.</p>
+        <p class="project-overview-copy">Genentech and Roche’s Floodlight MS, is app that allows patients living with MS to complete simple tasks on their devices to capture data that tracks disease progression and allows their providers to interpret  these objective measures through a provider portal. The Floodlight MS app closes gaps in communication and reduces subjectivity in patient reported symptoms. My team was involved in two phases of the website that partners with the app.</p>
 
         <h3 class="project-problem-headline">The Problem</h3>
-        <p class="project-problem-statemnt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class="project-problem-statemnt">The true challenges came down to limited real estate and time. The first phase of of the site served as a pre-launch introduction to the Floodlight MS app and had minimal content. The brief called for the full launch website to have a much more robust content strategy,  which was directly in conflict with the imperative for a minimalistic layout with few pages. Additionally A highly consolidated timeline leading to launch required a new approach to    working efficiently.</p>
 
         <h3 class="project-solution-headline">The Solution</h3>
-        <p class="project-solution-statemnt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class="project-solution-statemnt">Careful consideration of the site architecture and collaboration between UX and copywriting allowed us to deliver robust content in a minimalist layout. We reassessed a legacy workflow between UX and creative direction and shifted our approach to minimize inefficiencies.  By partnering to work in succession with one file; UX and art significantly reduced the time required to transition wireframes into creative design.</p>
+        <div class="role-deliverable-tool-grid">
+          <div class="role-list-group">
+            <h3 class="role-headline">Role</h3>
+            <ul class="role-list">
+              <li><p>UX Design Lead</p></li>
+            </ul>
+          </div>
 
-        <div class="role-list-group">
-          <h3 class="role-headline">Role</h3>
-          <ul class="role-list">
-            <li><p>UX Design Lead</p></li>
-          </ul>
-        </div>
+          <div class="deliverables-list-group">
+            <h3 class="deliverables-headline">Key deliverables</h3>
+            <ul class="deliverables-list">
+              <li><p>Sitemap</p></li>
+              <li><p>Wireframes</p></li>
+              <li><p>Functional Requirements Document</p></li>
+            </ul>
+          </div>
 
-        <div class="deliverables-list-group">
-          <h3 class="deliverables-headline">Key deliverables</h3>
-          <ul class="deliverables-list">
-            <li><p>Sitemap</p></li>
-            <li><p>Wireframes</p></li>
-            <li><p>Functional Requirements Document</p></li>
-          </ul>
-        </div>
-
-        <div class="tools-list-group">
-          <h3 class="tools-headline">Tools used</h3>
-          <ul class="tools-list">
-            <li><p>Sketch</p></li>
-            <li><p>Zeplin</p></li>
-          </ul>
+          <div class="tools-list-group">
+            <h3 class="tools-headline">Tools used</h3>
+            <ul class="tools-list">
+              <li><p>Sketch</p></li>
+              <li><p>Zeplin</p></li>
+            </ul>
+          </div>
         </div>
 
     </section>
 
     <section class="brief">
-      <h2 class="brief-headline">The brief</h2>
+      <h2 class="brief-headline">Interpreting the brief</h2>
+      <p class= "brief-introduction">In the second phase of the Floodlight MS project, we were challenged to update the site, expanding from the one-page layout of the first phase and introducing a second page with deeper, more clinical content for providers. We were to build upon the established look and feel of the previous microsite but expand significantly upon the content, applying a mobile first approach.</p>
+      <h3 class="brief-list-title" >Key considerations included</h3>
+      <ul class="brief-list-content">
+        <li><p>The scalable, mobile first, site needs to be <strong>content rich, but visually light</strong>.</p></li>
+        <li><p><strong>Prioritize reusing previously approved content</strong> already reviewed by governance risk & compliance (GRC).</p></li>
+        <li><p><strong>Brand new HCP-specific content</strong> will provided a deep-dive into usage, benefits and onboarding.</p></li>
+        <li><p>We would <strong>design a global site</strong> and the site design would be provided to and adapted for use by local affiliates, adhering to their local laws and regulations governing medical device messaging.</p></li>
+        <li><p>We were to take inspiration from sites that <strong>reflect the client's design vision.</strong></p></li>
+        <li><p><strong>Design with the KPIs in mind</strong>: success would be measured by the number of visitors, requests for more info and requests for demo.</p></li>
+      </ul>
       </section>
 
     <section class="phase-1">
+
       <h2 class="phase-1-headline">Phase one: the interim microsite</h2>
-      </section>
+      <h3 class="documentation">Documentation of Phase 1</h3>
+      <p class="phase-1-introduction">Continuity between the UX team members who led work on the first phase and the incoming team members who would lead phase two was supported by well prepared documentation, including thorough functional specifications, and working Sketch files that contained symbols ready for application to the phase two project.</p>
+      <h4 class="phase-1-functional-specifications-headline">Phase 1 Functional Specifications</h4>
+      <img class="phase-1-functional-specifications" src="images/phase-1-functional-specifications.png" alt="Floodlight MS Phase-1 Functional Specifications"></img>
+      <h4 class="phase-1-functional-anotations-headline">Phase 1 Functional Anotations</h4>
+      <img class="phase-1-functional-anotations" src="images/phase-1-functional-anotations.png" alt="Floodlight MS Phase-1 Functional Anotations"></img>
+      <h4 class="phase-1-wireframes-headline">Phase 1 wireframes</h4>
+      <img class="phase-1-wireframes" src="images/phase-1-wireframes.png" alt="Floodlight MS Phase-1 Wireframes"></img>
+      <p class="phase-1-communication">The two teams communicated on the challenges and opportunities that lied ahead with the second phase.<p>
+      <h3 class="phase-1-infrastructure-headline">The Site Infrastructure of Phase 1</h3>
+      <p class="phase-1-infrastructure">The phase 1 microsite included a single page format, with a single page with sections for People Living with MS, HCPS and Resources for both user types.</p>
+      <h4 class="phase-1-sitemap-headline">Phase one sitemap with three key sections - HCP, Patient and Resources</h4>
+      <img class="phase-1-sitemap" src="images/phase-1-sitemap.png" alt="Floodlight MS Phase-1 Sitemap"></img>
+      <h4 class="phase-1-full-layout-headline">Phase 1 Full  Layout</h4>
+      <img class="phase-1-full-layout" src="images/phase-1-full-layout.png" alt="Floodlight MS Phase-1 Full Layout"></img>
+      <h4 class="updating-phase-1-headline">Updates to Phase 1 in paralell with work on Phase 2</h4>
+      <p class="updating-phase-1">The team was asked to streamline the live microsite In parallel with the design of the full site, Highlighting the key function of allowing healthcare providers who have already adopted the tool, to access the provider portal,  eliminating the patient directed content and removing the contact form. </p>
+      <img class="phase-1-update" src="images/phase-1-update.png" alt="Floodlight MS Phase-1 Update"></img>
+
+    </section>
 
     <section class="phase-2">
       <h2 class="phase-2-headline">Expanding the site structure for phase 2</h2>
