Work on 2021 update

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -78,7 +78,7 @@
 
       <h1 class="hero-headline">Floodlight MS</h1>
       <p class="hero-copy">Streamlining collaboration between UX and creative direction with Sketch</p>
-      <img class="hero-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot" width="300px"></img>
+      <img class="case-study-hero-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot" width="300px"></img>
     </section>
 
     <section class="floodlight-summary">
@@ -140,21 +140,39 @@
       <h3 class="documentation">Documentation of Phase 1</h3>
       <p class="phase-1-introduction">Continuity between the UX team members who led work on the first phase and the incoming team members who would lead phase two was supported by well prepared documentation, including thorough functional specifications, and working Sketch files that contained symbols ready for application to the phase two project.</p>
       <h4 class="phase-1-functional-specifications-headline">Phase 1 Functional Specifications</h4>
-      <img class="phase-1-functional-specifications" src="images/phase-1-functional-specifications.png" alt="Floodlight MS Phase-1 Functional Specifications"></img>
+      <figure class="phase-1-functional-specifications">
+        <img class= "phase-1-functional-specifications-image" src="images/phase-1-functional-specifications.png" alt="Floodlight MS Phase-1 Functional Specifications"></img>
+        <figcaption> Functional specifications prepared by the phase-1 team</figcaption>
+      </figure>
       <h4 class="phase-1-functional-anotations-headline">Phase 1 Functional Anotations</h4>
-      <img class="phase-1-functional-anotations" src="images/phase-1-functional-anotations.png" alt="Floodlight MS Phase-1 Functional Anotations"></img>
+      <figure class="phase-1-functional-anotations">
+        <img class="phase-1-functional-anotations-image" src="images/phase-1-functional-anotations.png" alt="Floodlight MS Phase-1 Functional Anotations"></img>
+        <figcaption> Functional annotations prepared by the phase-1 team</figcaption>
+      </figure>
       <h4 class="phase-1-wireframes-headline">Phase 1 wireframes</h4>
-      <img class="phase-1-wireframes" src="images/phase-1-wireframes.png" alt="Floodlight MS Phase-1 Wireframes"></img>
+      <figure class="phase-1-wireframes">
+        <img class="phase-1-wireframes-image" src="images/phase-1-wireframes.png" alt="Floodlight MS Phase-1 Wireframes"></img>
+        <figcaption> Wireframes prepared by the phase-1 team</figcaption>
+      </figure>
       <p class="phase-1-communication">The two teams communicated on the challenges and opportunities that lied ahead with the second phase.<p>
       <h3 class="phase-1-infrastructure-headline">The Site Infrastructure of Phase 1</h3>
       <p class="phase-1-infrastructure">The phase 1 microsite included a single page format, with a single page with sections for People Living with MS, HCPS and Resources for both user types.</p>
       <h4 class="phase-1-sitemap-headline">Phase one sitemap with three key sections - HCP, Patient and Resources</h4>
-      <img class="phase-1-sitemap" src="images/phase-1-sitemap.png" alt="Floodlight MS Phase-1 Sitemap"></img>
+      <figure class="phase-1-sitemap">
+        <img class="phase-1-sitemap-image" src="images/phase-1-sitemap.png" alt="Floodlight MS Phase-1 Sitemap"></img>
+        <figcaption> Sitemap prepared by the phase-1 team</figcaption>
+      </figure>
       <h4 class="phase-1-full-layout-headline">Phase 1 Full  Layout</h4>
-      <img class="phase-1-full-layout" src="images/phase-1-full-layout.png" alt="Floodlight MS Phase-1 Full Layout"></img>
+      <figure class="phase-1-full-layout">
+        <img class="phase-1-full-layout-image" src="images/phase-1-full-layout.png" alt="Floodlight MS Phase-1 Full Layout"></img>
+        <figcaption> Full site layout prepared by the phase-1 team</figcaption>
+      </figure>
       <h4 class="updating-phase-1-headline">Updates to Phase 1 in paralell with work on Phase 2</h4>
       <p class="updating-phase-1">The team was asked to streamline the live microsite In parallel with the design of the full site, Highlighting the key function of allowing healthcare providers who have already adopted the tool, to access the provider portal,  eliminating the patient directed content and removing the contact form. </p>
-      <img class="phase-1-update" src="images/phase-1-update.png" alt="Floodlight MS Phase-1 Update"></img>
+      <figure class="phase-1-update">
+        <img class="phase-1-update-image" src="images/phase-1-update.png" alt="Floodlight MS Phase-1 Update"></img>
+        <figcaption> My team's approach to consolidating content on the microsite</figcaption>
+      </figure>
 
     </section>
 
