Work on 2021 update

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -77,8 +77,8 @@
     <section class="hero">
       <h1 class="hero-headline">Hi, I’m Jess, a senior UX designer from New York</h1>
       <p class="hero-copy">I specialize in creating joyful and personal digital experiences that deliver true ROI every time.</p>
-      <button class="hero-work" href="#work">Read case studies</button>
       <button class="hero-contact" href="https://www.jessblanchard.design/contact.html">Get in contact</button>
+      <button class="hero-work secondary-cta" href="#work">Read case studies</button>
 
     </section>
 
