Continued work on phase 2

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -103,6 +103,7 @@
           <div class="deliverables-list-group">
             <h3 class="deliverables-headline">Key deliverables</h3>
             <ul class="deliverables-list">
+              <li><p>User stories</p></li>
               <li><p>Sitemap</p></li>
               <li><p>Wireframes</p></li>
               <li><p>Functional Requirements Document</p></li>
@@ -128,6 +129,7 @@
         <li><p>The scalable, mobile first, site needs to be <strong>content rich, but visually light</strong>.</p></li>
         <li><p><strong>Prioritize reusing previously approved content</strong> already reviewed by governance risk & compliance (GRC).</p></li>
         <li><p><strong>Brand new HCP-specific content</strong> will provided a deep-dive into usage, benefits and onboarding.</p></li>
+        <li><p>We could add <strong>only one new page</strong> to the existing 1-page microsite structure</p></li>
         <li><p>We would <strong>design a global site</strong> and the site design would be provided to and adapted for use by local affiliates, adhering to their local laws and regulations governing medical device messaging.</p></li>
         <li><p>We were to take inspiration from sites that <strong>reflect the client's design vision.</strong></p></li>
         <li><p><strong>Design with the KPIs in mind</strong>: success would be measured by the number of visitors, requests for more info and requests for demo.</p></li>
@@ -178,11 +180,54 @@
 
     <section class="phase-2">
       <h2 class="phase-2-headline">Expanding the site structure for phase 2</h2>
+
+      <h3 class="inspiration-headline">Looking to inspiration</h3>
+      <p class="Inspiration-intro"> The client was inspired not only by the sleek look and feel of sites like Oleena.com, but by the well-crafted inclusion of deeper content than is visually apparent upon first glance.  We wanted the visual layout to provide a deeper look into the product, without the visual clutter that’s inherent to an in depth content strategy.  A one page layout and artful use of anchor links, iconography, tabs, and hover states were all design patterns that we saw contribute to the overall light and airy experience that we needed to keep in mind as we worked to the strategize how to overcome the disparity between content and page real-estate.</p>
+      <div class="inspiration-chart">
+        <p class="inspiration-point-1">1 page layout</p>
+        <p class="inspiration-point-2">Anchor links</p>
+        <p class="inspiration-point-3">Iconography</p>
+        <p class="inspiration-point-4">Tabs</p>
+        <p class="inspiration-point-5">Hover states</p>
+      </div>
+
+      <h3 class="user-stories-headline">User stories directed by the brief and strategic imperitives Informed the sitemap and content strategy</h3>
+      <p class="user-stories-intro">The new site would target two key audiences, patients and providers, with the homepage presenting an overview suitable for consumption by both, but patient facing on its surface. A separate more detailed page would contains the sort of clinical content thay providers in particular would be seeking.</p>
+      <h4 class="patient-user-stories-list-title">Patient user stories included:</h4>
+        <ul class="patient-user-stories-list">
+          <li><p>As a patient or caregiver, I want to download the Floodlight MS App, so that I can begin to use it.</p></li>
+          <li><p>As a patient/caregiver I want to know what to expect once I am in the app, so that I don’t adopt a tool that isn’t useful for me.</p></li>
+          <li><p>As a patient/caregiver, I want to contact customer support for more information so that I can    obtain access.</p></li>
+          <li><p>As a patient/caregiver, I want to access resources, so that I can review additional documentation for the application.</p></li>
+          <li><p>As a patient/caregiver, I want to access FAQs, so that I can find answers to common questions and avoid needing to reach out to support.</p></li>
+          <li><p>As a patient/caregiver I want to review the intended use statement to clarify any ambiguity on what the app’s intended use it.</p></li>
+          <li><p></p></li>
+          <li><p></p></li>
+        </ul>
+      <h4 class="hcp-user-stories-list-title">Health care provider user stories included:</h4>
+      <ul class="hcp-user-stories-list">
+        <li><p>As an HCP, I want to determine what Floodlight MS is so that I can determine if its relevant to my practice.</p></li>
+        <li><p>As an HCP, I want to know what metrics are a part of the app experience to that I know what my patients will be experiencing.</p></li>
+        <li><p>As an HCP, I want to access resources, so that I can review additional documentation for the application.</p></li>
+        <li><p>As a HCP, I want to access FAQs, so that I can find answers to common questions and avoid needing to reach out to support.</p></li>
+        <li><p>As an HCP, I want to review the intended use statement to clarify any ambiguity on what the app’s intended use it.</p></li>
+        <li><p>As an HCP, I want to request a demo, so that I can find out exactly what the provider and patient benefits and experience are and onboard.</p></li>
+        <li><p>As an HCP, I want to know how the 5 activities compare to traditional patient followup, to quickly understand why I should further explore this solution.</p></li>
+        <li><p>As an HCP, I want to know what in-clinic assessments are replaces by the 5 activities, so that I am sure all of y current bases qill be adequately covered by the app.</p></li>
+      </ul>
+
+      <h3 class="sitemap-headline">Sitemap and content strategy</h3>
+      <p class="sitemap-intro">Developing the phase two sitemap happened in close collaboration with the copywriting team. The primary homepage departed from 3 three main sections and expanded to 5. While the general functions on the preceding site would continue, they would be largely re-written and expanded before being placed along side brand new content.</p>
+      <figure class="content-strategy-summary">
+        <img class="content-strategy-summary-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <figcaption> Inventorying what would be reimagined and what would be new</figcaption>
+      </figure>
+
       </section>
 
     <section class="art-direction">
       <h2 class="art-direction-headline">Advocating for art direction in Sketch</h2>
-      </section>
+    </section>
 
     <section class="development-handoff">
       <h2 class="development-handoff-headline">Development handoff</h2>
