Continued work on phase 2

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -222,6 +222,50 @@
         <img class="content-strategy-summary-image" src="images/image-placeholder.png" alt="Content strategy"></img>
         <figcaption> Inventorying what would be reimagined and what would be new</figcaption>
       </figure>
+      <p class="content-strategy-intro">Although the inspiration sites were primarily one-page, this project required that a full new page needed to be incorporated for HCP content. This new page would introduce a cache of new provider directed content previously approved by GRC for use in other tactics. <br><br>In-kind, the complexity of the sitemap grew, as did the level of detail provided for each item mapped:</p>
+      <ul class="content-strategy-list">
+        <li><p>Overview: Provides HCP specific insight into the tool and its benefits</p></li>
+        <li><p>Activities: Explains the activities users take and how they correlate to commonly used clinical assessments</p></li>
+        <li><p>Unmet Need: Compares the challenges presented with the commonly used clinical assessments and the solutions offered by the Floodlight MS tool</p></li>
+        <li><p>Portal Features: Explains what the portal experience is like for participating providers</p></li>
+        <li><p>HCP Support: Provides contact information for provider support</p></li>
+        <li><p>Request a Demo: Allows providers to request a demo, ultimately driving them toward conversion</p></li>
+      </ul>
+      <figure class="phase-2-sitemap">
+        <img class="phase-2-sitemap-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <figcaption> The new sitemap</figcaption>
+      </figure>
+
+      <h3 class="manuscript-headline">The manuscript</h3>
+      <p class="manuscript-intro">Written content for phase two was presented in a detailed manuscript. UX provided early insight into what components may be suitable for delivering unique content, such as cards, tables and tabs.</p>
+      <figure class="floodlight-manuscript">
+        <img class="floodlight-manuscript-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <figcaption>The new manuscript</figcaption>
+      </figure>
+
+      <h3 class="floodlight-wireframes">Wireframes</h3>
+      <p class="floodlight-wireframe-intro">With the sitemap and manuscript approved by the client, it was time to plan individual page infastructure by preparing a set of wireframes.  The agency’s UX workflow may incorporate a variety of design tools for wireframing as directed by client need that include programs such as Sketch, Figma and Adobe XD.<br><br>Without a client directive, we primarily recommend Sketch because it’s an industry leader and provides a wide swath of functionality to design, prototype, and collaborate on projects. Sketch has partnerships for collaboration with some of our most commonly used tools, such as Zeplin, a resource for handing off design files to our client’s development teams and it provides a good balance of stability and expanding capabilities. New plugins mean that Sketch can be customized to meet a seemingly endless array of project needs.<br><br>Most importantly, Sketch files are increasingly becoming one of the most requested UX design deliverables for handoff.<br><br> As we moved forward with Sketch wireframes, our collaboration with copywriting had allowed for opportunity to provide feedback on what components would best tell the story in the manuscript. Those components were brought into wireframes and evolved through several iterations. </p>
+
+      <figure class="floodlight-wireframe-homepage">
+        <img class="floodlight-wireframe-homepage-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <figcaption>Homepage wireframe</figcaption>
+      </figure>
+
+      <figure class="floodlight-wireframe-hcp-page">
+        <img class="floodlight-wireframe-hcp-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <figcaption>HCP page wireframe</figcaption>
+      </figure>
+      <h4 class="streamlining-creative-handoff-headline">Creating a design file that would cross disciplines</h4>
+      <p class="streamlining-creative-handoff-intro">Seeking to streamline handoff between UX and art direction, a few key considerations went into setting up the design file so that it could cross disciplines and prevent the need for art direction to recreate the design environment in Adobe Photoshop.</p>
+      <ul class="streamlining-creative-handoff-list">
+        <li><p>Clearly organize the desktop.</p>
+          <ul>
+              <li><p>Ordering artboards in logical sequence on the canvas</p></li>
+              <li><p>Labeling artboards with informational names and numbers that created ordered PDF exports</p></li>
+            </ul>
+          </li>
+        <li><p>Employ symbols to update recurring components at one time.</p></li>
+      </ul>
 
       </section>
 
