continued work on organizing the grid placement for the phase 2 section; additional work required.

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -71,9 +71,6 @@
 
     </nav>
 
-
-
-
     <section class="hero">
 
       <h1 class="hero-headline">Floodlight MS</h1>
@@ -180,9 +177,8 @@
 
     <section class="phase-2">
       <h2 class="phase-2-headline">Expanding the site structure for phase 2</h2>
-
       <h3 class="inspiration-headline">Looking to inspiration</h3>
-      <p class="Inspiration-intro"> The client was inspired not only by the sleek look and feel of sites like Oleena.com, but by the well-crafted inclusion of deeper content than is visually apparent upon first glance.  We wanted the visual layout to provide a deeper look into the product, without the visual clutter that’s inherent to an in depth content strategy.  A one page layout and artful use of anchor links, iconography, tabs, and hover states were all design patterns that we saw contribute to the overall light and airy experience that we needed to keep in mind as we worked to the strategize how to overcome the disparity between content and page real-estate.</p>
+      <p class="inspiration-intro"> The client was inspired not only by the sleek look and feel of sites like Oleena.com, but by the well-crafted inclusion of deeper content than is visually apparent upon first glance.  We wanted the visual layout to provide a deeper look into the product, without the visual clutter that’s inherent to an in depth content strategy.  A one page layout and artful use of anchor links, iconography, tabs, and hover states were all design patterns that we saw contribute to the overall light and airy experience that we needed to keep in mind as we worked to the strategize how to overcome the disparity between content and page real-estate.</p>
       <div class="inspiration-chart">
         <p class="inspiration-point-1">1 page layout</p>
         <p class="inspiration-point-2">Anchor links</p>
