Divided style sheets to get better organized; continued to add content to art direction section of Floodlight case study

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -15,7 +15,8 @@
     <!-- Reset -->
     <link rel=stylesheet href="styles/reset.css">
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="styles/stylesheet-2.0.css">
+    <link rel="stylesheet" href="styles/portfolio-2021-global-components.css">
+    <link rel="stylesheet" href="styles/portfolio-2021-homepage-specific.css">
     <link rel="shortcut icon" type="image/x-icon" href="jess-logo-blue.ico">
 
     <!-- Mobile nav settings to close on clicking anchor link -->
