--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -15,7 +15,8 @@
     <!-- Reset -->
     <link rel=stylesheet href="styles/reset.css">
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="styles/stylesheet-2.0.css">
+    <link rel="stylesheet" href="styles/portfolio-2021-global-components.css">
+    <link rel="stylesheet" href="styles/portfolio-2021-floodlight-specific.css">
     <link rel="shortcut icon" type="image/x-icon" href="jess-logo-blue.ico">
 
     <!-- Mobile nav settings to close on clicking anchor link -->
@@ -74,7 +75,7 @@
     <section class="hero">
 
       <h1 class="hero-headline">Floodlight MS</h1>
-      <p class="hero-copy">Streamlining collaboration between UX and creative direction with Sketch</p>
+      <p class="hero-copy">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. <br><br>My team designed an accessible website for the app, building upon the look and feel of an earlier microsite, while incorporating an expanded content strategy and applying a mobile first approach. </p>
       <img class="case-study-hero-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot" width="300px"></img>
     </section>
 
@@ -262,11 +263,34 @@
           </li>
         <li><p>Employ symbols to update recurring components at one time.</p></li>
       </ul>
+      <figure class="floodlight-wireframe-sketch-workspace">
+        <img class="floodlight-wireframe-sketch-workspace" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <figcaption>An organized sketch workspacee</figcaption>
+      </figure>
+      <figure class="floodlight-consistent-labeling">
+        <img class="floodlight-consistent-labeling-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <figcaption>Clear and consistent element labeling</figcaption>
+      </figure>
+      <figure class="floodlight-sketch-symbols">
+        <img class="floodlight-sketch-symbols-image" src="images/image-placeholder.png" alt="Content strategy"></img>
+        <figcaption>Symbols are used to minimize reetitive uopdates</figcaption>
+      </figure>
 
       </section>
 
     <section class="art-direction">
       <h2 class="art-direction-headline">Advocating for art direction in Sketch</h2>
+      <p class="art-direction-intro">Moving into the creative direction phase I handed off my sketch files via Sketch Cloud allowing the creative designer to join the file, duplicate my wire frame pages and use them as the basis for the creative design.
+        <br><br>Employing the Sketch symbols feature early in the wire framing stage empowered us to turn items as complex as entire sections of the website into recurring elements. This made it extremely easy to make quick updates to the look and feel of components and update copywriting as the client’s promotional review committee shared revisions. When changes were made to a symbol, this automatically pulled through to all artboards that contain that symbol.
+        <br><br>The creative designer appreciated working with sketch artboards over the layer comps in Photoshop because it was easier to see all states of the site together at one time in Sketch. The way the artboards are laid out in Sketch makes it easy to ensure everything is included and that all elements align well.
+        <br><br>I collaborated closely with creative design during this stage to make usability revisions including the inclusion of the transcript overlay for the homepage’s hero section video, and inclusion of video overlays of the app activities on the provider’s page.
+      </p>
+      <h3 class="revisions-for-accessibility-headline">Revisions for accessibility</h3>
+      <p class="revisions-for-accessibility-intro">Every project needs to be designed with accessibility in mind, so I also provided extensive consultation on how to adhere to the WCAG 2.1 AA standard for accessibility. Color contrast proved challenging to maneuver because, as is often the case, brand colors were approved by the client before our engagement and limited opportunities to create high contrast without close consideration. We also made several revisions to ensure that more obscure   guidelines were adhered to, such as the need to ensure that videos and animations of 5 seconds or more have a way to be paused, stopped or hidden.
+      </p>
+      <h3 class="benefits-to-creative-design-headline">Benefits to Creative Design</h3>
+      <p class="benefits-to-creative-design-intro">By eliminating the shift from Sketch wireframes to creative layout in Photoshop, we reduced the opportunities for human error and duplicative work. Sketch symbols eliminated the need to make repetitive updates across many layer comps. We shaved days off of our timeline and got our project approved through the client’s promotional reviews committee and handed off to the client’s development team on time.</p>
+
     </section>
 
     <section class="development-handoff">
